--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -60,6 +60,7 @@ jobs:
           chmod +x install.sh
           ./install.sh --accept-all-defaults
           echo "::add-path::/home/runner/bin"
+          exec -l $SHELL
           
       - name: 'Fix Config File Permissions'
         run: |
