--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,6 +55,8 @@ jobs:
           
           
       - name: 'Install OCI CLI'
+        env: 
+          ACTION_ALLOW_UNSECURE_COMMAND: 'true' 
         run: |
           curl -L -O https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh
           chmod +x install.sh
