--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,12 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+env:
+  IMAGE_NAME: AdemAdem/nginx:latest 
+  DEPLOYMENT_NAME: text.html
+  PORT: 5000
+
 
 jobs:
 
