--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
- kind: Deployment
- metadata:
-  - name: ngnix-01
+kind: Deployment
+ metadata :
+  - name: ngnix-deployment
     labels:
      app: nginx
      spec:
