--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -75,9 +75,9 @@ jobs:
       - name: 'Deploy the API on OKE'
         run: |
             kubectl delete deployment $DEPLOYMENT_NAME
-            kubectl create deployment $DEPLOYMENT_NAME --image=$IMAGE_NAME --dry-run -o yaml > deployment.yaml
-            kubectl apply -f deployment.yaml
+            kubectl create deployment $DEPLOYMENT_NAME --image=$IMAGE_NAME --dry-run -o yaml > deployment01.yaml
+            kubectl apply -f deployment01.yaml
             kubectl rollout status deployment/$DEPLOYMENT_NAME
-            kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service.yaml
-            kubectl apply -f service.yaml
+            kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service01.yaml
+            kubectl apply -f service01.yaml
             kubectl get services -o wide
