--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
     
 env:
   IMAGE_NAME: ademkoraani/github:latest 
-  DEPLOYMENT_NAME: ngnix-01
+  DEPLOYMENT_NAME: nginx-01
   PORT: 5000
 
 
